<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.codex.namazdiary.ImportKaza">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="30dp"
            android:text="@string/fajar"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView29"
            android:layout_alignStart="@+id/textView29"
            android:layout_marginTop="39dp"
            android:text="@string/zohar"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView30"
            android:layout_alignStart="@+id/textView32"
            android:layout_marginTop="36dp"
            android:text="@string/asar"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView31"
            android:layout_alignStart="@+id/textView30"
            android:layout_marginTop="36dp"
            android:text="@string/magrib"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView32"
            android:layout_alignStart="@+id/textView32"
            android:layout_marginTop="35dp"
            android:text="@string/esha"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView29"
        android:layout_alignBottom="@+id/textView29"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView32"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView30"
        android:layout_alignBottom="@+id/textView30"
        android:layout_alignStart="@+id/editText"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView31"
        android:layout_alignBottom="@+id/textView31"
        android:layout_alignStart="@+id/editText2"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView32"
        android:layout_alignBottom="@+id/textView32"
        android:layout_alignStart="@+id/editText3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView33"
        android:layout_alignBottom="@+id/textView33"
        android:layout_alignStart="@+id/editText4"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/addbtn"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary" />
        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adviewimport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button3"
            android:layout_marginTop="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/others"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>
</ScrollView>